--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ SIP_1 (ring_list)/ipch
 
 Debug/SIP_1 (ring_list).pdb
 ipch/SIP_1 (RING_LIST)-a4bf0a70/SIP_1 (RING_LIST)-a4b1ec64.ipch
+SIP_1 (ring_list).VC.db
+ipch/SIP_1 (RING_LIST)-6e4b82f2/SIP_1 (RING_LIST)-a4b1ec64.ipch
+SIP_1 (ring_list).VC.db
+SIP_1 (ring_list).VC.db
+*.db
+*.opendb
+*.db
